# HOVER

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  install_deps.sh  punch.yaml  pyproject.toml  requirements.txt  requirements_deploy.txt  retarget_h1.sh  run.sh  run_e2e_tests.sh  run_unit_tests.sh
neural_wbc/core/: README.md  setup.py
neural_wbc/core/tests/: test_body_state.py  test_evaluator.py  test_mask.py  test_reference_motion_manager.py  test_student_history.py  test_student_observations.py  test_teacher_observations.py  test_termination.py
neural_wbc/data/: README.md  setup.py
neural_wbc/data/tests/: test_get_file_path.py
neural_wbc/hw_wrappers/: README.md  setup.py
neural_wbc/hw_wrappers/hw_wrappers/: __init__.py  h1_sdk_wrapper.py  unitree_h1.py
neural_wbc/hw_wrappers/tests/: test_unitree_h1.py
neural_wbc/inference_env/: setup.py
neural_wbc/inference_env/inference_env/: README.md  deployment_player.py  neural_wbc_env.py  neural_wbc_env_cfg.py  neural_wbc_env_cfg_h1.py  neural_wbc_env_cfg_real_h1.py  utils.py
neural_wbc/inference_env/scripts/: eval.py  mujoco_viewer_player.py  s2r_player.py
neural_wbc/inference_env/tests/: test_evaluation_pipeline.py  test_neural_wbc_env.py
neural_wbc/isaac_lab_wrapper/: setup.py
neural_wbc/isaac_lab_wrapper/tests/: test_main.py  test_neural_wbc_env.py  test_observations.py  (+1 more)
neural_wbc/mujoco_wrapper/: README.md  setup.py
neural_wbc/student_policy/: README.md  setup.py
scripts/rsl_rl/: eval.py  play.py  players.py  teacher_policy_cfg.py  train_student_policy.py  train_teacher_policy.py  utils.py  vecenv_wrapper.py
(+61 files in other folders)
